--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
         "vite": "^6.2.4"
+    },
+    "dependencies": {
+        "@stripe/react-stripe-js": "^3.7.0",
+        "@stripe/stripe-js": "^7.3.1",
+        "date-fns": "^4.1.0"
     }
 }
