--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "vite": "^6.2.4"
     },
     "dependencies": {
+        "@fontsource/dancing-script": "^5.2.6",
         "@stripe/react-stripe-js": "^3.7.0",
         "@stripe/stripe-js": "^7.3.1",
         "date-fns": "^4.1.0"
