--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     },
     "dependencies": {
         "@fontsource/dancing-script": "^5.2.6",
+        "@heroicons/react": "^2.2.0",
         "@stripe/react-stripe-js": "^3.7.0",
         "@stripe/stripe-js": "^7.3.1",
-        "date-fns": "^4.1.0"
+        "date-fns": "^4.1.0",
+        "recharts": "^2.15.3"
     }
 }
