--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -17,12 +17,13 @@ cmds = [
 [phases.deploy]
 cmds = [
   'php artisan migrate --force --no-interaction',
+  'rm -rf public/storage || true',
   'php artisan storage:link --force || true',
   'php artisan optimize:clear',
   'php artisan config:cache',
   'php artisan route:cache',
   'php artisan view:cache',
-  'chmod -R 775 storage bootstrap/cache'
+  'chmod -R 775 storage bootstrap/cache || true'
 ]
 
 [start]
