UNIT TESTING GUIDE

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,3 +1,11 @@
+# PHP Upload Limits (only works with mod_php, not PHP-FPM)
+<IfModule mod_php.c>
+    php_value upload_max_filesize 10M
+    php_value post_max_size 12M
+    php_value max_execution_time 120
+    php_value memory_limit 256M
+</IfModule>
+
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
