--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "@heroicons/react": "^2.2.0",
         "@stripe/react-stripe-js": "^3.7.0",
         "@stripe/stripe-js": "^7.3.1",
+        "@supabase/supabase-js": "^2.84.0",
         "chart.js": "^4.4.0",
         "cloudinary": "^2.8.0",
         "date-fns": "^4.1.0",
