--- a/package.json
+++ b/package.json
@@ -36,14 +36,19 @@
     "dependencies": {
         "@fontsource/dancing-script": "^5.2.6",
         "@heroicons/react": "^2.2.0",
+        "@react-three/drei": "^9.122.0",
+        "@react-three/fiber": "^8.18.0",
         "@stripe/react-stripe-js": "^3.7.0",
         "@stripe/stripe-js": "^7.3.1",
         "@supabase/supabase-js": "^2.84.0",
         "chart.js": "^4.4.0",
         "cloudinary": "^2.8.0",
         "date-fns": "^4.1.0",
+        "gsap": "^3.14.2",
+        "lenis": "^1.3.17",
         "lucide-react": "^0.544.0",
         "react-chartjs-2": "^5.3.1",
-        "recharts": "^2.15.3"
+        "recharts": "^2.15.3",
+        "three": "^0.150.0"
     }
 }
